@@ -2,6 +2,6 @@
 
 # set the xterm window title
 TERMTITLE="infocmp: $TERM"
-echo -ne "\033]0;${TERMTITLE}\007"
+echo -ne "\\033]0;${TERMTITLE}\\007"
 
 infocmp -x | less
