@@ -59,6 +59,10 @@ FMouseControl*      FTerm::mouse            = 0;
   FTermOpenBSD* FTerm::openbsd = 0;
 #endif
 
+#if DEBUG
+  FTermDebugData* FTerm::debug_data = 0;
+#endif
+
 
 //----------------------------------------------------------------------
 // class FTerm
@@ -888,6 +892,11 @@ void FTerm::init_global_values (bool disable_alt_screen)
 
   if ( ! init_values.terminal_detection )
     term_detection->setTerminalDetection (false);
+
+#if DEBUG
+  debug_data->setFTermDetection(term_detection);
+  debug_data->setFTermData(data);
+#endif
 }
 
 //----------------------------------------------------------------------
@@ -1090,7 +1099,7 @@ void FTerm::init_termcap()
   // Initialize the terminal capabilities
 
   FTermcap termcap;
-  termcap.setTermData(data);
+  termcap.setFTermData(data);
   termcap.setFTermDetection(term_detection);
   termcap.init();
 
@@ -1104,7 +1113,7 @@ void FTerm::init_quirks()
   // Initialize terminal quirks
 
   FTermcapQuirks quirks;
-  quirks.setTermData (data);
+  quirks.setFTermData (data);
   quirks.setFTermDetection (term_detection);
   quirks.terminalFixup();  // Fix terminal quirks
 }
@@ -1681,6 +1690,10 @@ inline void FTerm::allocationValues()
 #elif defined(__NetBSD__) || defined(__OpenBSD__)
     openbsd        = new FTermOpenBSD();
 #endif
+
+#if DEBUG
+    debug_data     = new FTermDebugData();
+#endif
   }
   catch (const std::bad_alloc& ex)
   {
@@ -1692,6 +1705,11 @@ inline void FTerm::allocationValues()
 //----------------------------------------------------------------------
 inline void FTerm::deallocationValues()
 {
+#if DEBUG
+  if ( debug_data )
+    delete debug_data;
+#endif
+
 #if defined(__NetBSD__) || defined(__OpenBSD__)
   if ( openbsd )
     delete openbsd;
@@ -1750,7 +1768,7 @@ void FTerm::init (bool disable_alt_screen)
   initBaudRate();
 
   // Terminal detection
-  term_detection->setTermData(data);
+  term_detection->setFTermData(data);
   term_detection->detect();
   setTermType (term_detection->getTermType());
 
