@@ -142,6 +142,9 @@ class FVTerm
     static char*          getTermType();
     static char*          getTermFileName();
     FTerm&                getFTerm();
+#if DEBUG
+    FTermDebugData&       getFTermDebugData();
+#endif
 
     // Mutators
     void                  setTermXY (int, int);
@@ -643,6 +646,12 @@ inline char* FVTerm::getTermFileName()
 //----------------------------------------------------------------------
 inline FTerm& FVTerm::getFTerm()
 { return *fterm; }
+
+//----------------------------------------------------------------------
+#if DEBUG
+inline FTermDebugData& FVTerm::getFTermDebugData()
+{ return getFTerm().getFTermDebugData(); }
+#endif
 
 //----------------------------------------------------------------------
 inline void FVTerm::hideCursor()
