@@ -1,3 +1,6 @@
+2018-11-01  Markus Gans  <guru.mail@muenster.de>
+	* Moved FTerm debug access methods to FTermDebugData
+
 2018-10-29  Markus Gans  <guru.mail@muenster.de>
 	* FTerm is now a data member of FVTerm
 	* Fix FListBox prevListItem()
